# llama.rs

./: .gitignore  CODEX.md  CONTRIBUTING.md  Cargo.toml  PR_REVIEW.md  README.md  REVIEW-PR-21.md  REVIEW-PR-22.md  REVIEW.md  REVIEW_PR25.md  REVIEW_PR32.md  REVIEW_PR59.md  justfile  pr-41-review.md
.github/: LABELS.md
.github/workflows/: ci.yml
crates/llama-agents/: Cargo.toml
crates/llama-agents/src/: lib.rs  orchestration.rs
crates/llama-cli/: Cargo.toml
crates/llama-cli/src/: lib.rs  main.rs
crates/llama-cli/tests/: layout_bug.rs
crates/llama-engine/: Cargo.toml
crates/llama-engine/src/: lib.rs
crates/llama-engine/tests/: engine_tests.rs  integration_pipeline.rs
crates/llama-kv/: Cargo.toml
crates/llama-kv/src/: lib.rs
crates/llama-kv/tests/: kv_tests.rs
crates/llama-models/: Cargo.toml
crates/llama-models/src/: lib.rs
crates/llama-models/tests/: unaligned_safetensors.rs
crates/llama-rag/: Cargo.toml  README.md
crates/llama-rag/examples/: async_adapter_demo.rs
crates/llama-rag/src/: async_embedder.rs  config.rs  embedder.rs  error.rs  language_model.rs  lib.rs  pipeline.rs  prompt.rs
crates/llama-runtime/: Cargo.toml
crates/llama-runtime/src/: backend.rs  lib.rs  telemetry.rs
crates/llama-runtime/tests/: kv_equivalence.rs
crates/llama-sampling/: Cargo.toml
crates/llama-sampling/src/: lib.rs
crates/llama-sampling/tests/: sampling_tests.rs
crates/llama-server/: Cargo.toml  README.md
crates/llama-server/src/: error.rs  lib.rs  main.rs  server.rs  session_manager.rs  state.rs  streaming.rs
crates/llama-server/src/handlers/: chat.rs  embeddings.rs  health.rs  mod.rs
crates/llama-server/src/models/: chat.rs  common.rs  embeddings.rs  mod.rs  streaming.rs
crates/llama-server/tests/: integration_test.rs
crates/llama-tokenizer/: Cargo.toml
crates/llama-tokenizer/src/: lib.rs
crates/llama-tokenizer/tests/: bug_repro.rs  roundtrip.rs  tokenizer_tests.rs
docs/: ARCHITECTURE.md  MILESTONE_A.md  PROGRESS_REPORT.md  ROADMAP.md  SUGGESTIONS.md  TDD_LLM_D_SUPPORT.md  TEST_STRATEGY.md
docs-site/: index.html  nginx.conf.template  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
docs-site/src/: App.tsx  app.tsx  build.ts  dev.ts  main.tsx
docs-site/src/components/: Layout.tsx  Sidebar.tsx
docs-site/src/pages/: Architecture.tsx  GettingStarted.tsx  Home.tsx  Roadmap.tsx  architecture.tsx  ecosystem.tsx  getting-started.tsx  index.tsx  roadmap.tsx
docs-site/src/pages/crates/: LlamaEngine.tsx  LlamaKv.tsx  LlamaModels.tsx  LlamaRuntime.tsx  LlamaSampling.tsx  LlamaTokenizer.tsx  llama-engine.tsx  llama-kv.tsx  llama-models.tsx  llama-runtime.tsx  llama-sampling.tsx  llama-tokenizer.tsx
docs-site/src/pages/ecosystem/: OxidizedGraph.tsx  OxidizedMLX.tsx  OxidizedRAG.tsx
docs-site/src/styles/: theme.ts
docs/reviews/: pr-29-30-31-review.md
scripts/: create-labels.sh
src/: error.rs  lib.rs  model.rs  session.rs
src/cache/: mod.rs
src/engine/: actor.rs  mod.rs
src/mlx/: array.rs  dtype.rs  metal.rs  mod.rs  ops.rs  sys.rs
src/model/: attention.rs  config.rs  embedding.rs  linear.rs  mod.rs  norm.rs  rope.rs  transformer.rs
src/sampling/: mod.rs
src/tokenizer/: mod.rs
src/weights/: mmap.rs  mod.rs  safetensors.rs
tests/: README.md  config_test.rs  dtype_test.rs  safetensors_test.rs  sampling_test.rs  tokenizer_test.rs
