[workspace]
resolver = "2"
members = [
    "crates/llama-engine",
    "crates/llama-tokenizer",
    "crates/llama-models",
    "crates/llama-runtime",
    "crates/llama-sampling",
    "crates/llama-kv",
    "crates/llama-agents",
    "crates/llama-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/stevedores-org/llama.rs"

[workspace.dependencies]
thiserror = "2"
uuid = { version = "1.6", features = ["v4"] }
serde_json = "1"
