[workspace]
resolver = "2"
members = [
    "crates/llama-engine",
    "crates/llama-tokenizer",
    "crates/llama-models",
    "crates/llama-runtime",
    "crates/llama-sampling",
    "crates/llama-kv",
    "crates/llama-agents",
    "crates/llama-rag",
    "crates/llama-cli",
    "crates/llama-server",
    "crates/llama-rag",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/stevedores-org/llama.rs"

[workspace.dependencies]
thiserror = "2"
uuid = { version = "1.6", features = ["v4"] }
serde_json = "1"
tracing = "0.1"
