[package]
name = "llama-agents"
description = "Agent nodes and actor-style state persistence for llama.rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
llama-engine = { path = "../llama-engine", version = "0.1.0" }
llama-kv = { path = "../llama-kv", version = "0.1.0" }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
futures = "0.3"
