[package]
name = "llama-cli"
description = "CLI runner for llama.rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
llama-engine = { path = "../llama-engine" }
llama-runtime = { path = "../llama-runtime" }
clap.workspace = true
thiserror.workspace = true
