[package]
name = "llama-rag"
description = "RAG adapter mapping llama-engine embeddings to retrieval-augmented generation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
llama-engine = { path = "../llama-engine" }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
futures = "0.3"
