[package]
name = "llama-runtime"
description = "Runtime backend selection and execution for llama.rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
llama-engine = { path = "../llama-engine" }
llama-tokenizer = { path = "../llama-tokenizer" }
llama-sampling = { path = "../llama-sampling" }
llama-kv = { path = "../llama-kv" }
thiserror.workspace = true
