[package]
name = "llama-runtime"
description = "Execution runtime for llama.rs — oxidizedMLX integration and backend selection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
llama-engine = { path = "../llama-engine" }
llama-tokenizer = { path = "../llama-tokenizer" }
llama-sampling = { path = "../llama-sampling" }
thiserror.workspace = true
