[package]
name = "llama-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
llama-engine = { path = "../llama-engine" }
llama-runtime = { path = "../llama-runtime" }
llama-tokenizer = { path = "../llama-tokenizer" }

tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
async-stream = "0.3"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
